# Cars_AI

./: CMakeLists.txt  README.md
Cars_neural_network/: Cars_neural_network.sln  Cars_neural_network.vcxproj  Cars_neural_network.vcxproj.filters
includes/: car.h  line.h  network.h  neuron.h  road.h  simulation.h  utils.h  vector.h
sources/: car.cpp  cars.cpp  line.cpp  main.cpp  network.cpp  neuron.cpp  road.cpp  simulation.cpp  utils.cpp  vector.cpp
